<resources>
    <string name="app_name">CloudStatusTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disable_notifications">Disable All Notifications</string>
    <string name="settings">Settings</string>
    <string name="all_notification_enabled">All Notifications Enabled</string>
    <string name="notification_channel_name">New %1$s Items</string>
    <string name="notification_title">New items for %1$s</string>
    <string name="notification_text">
        New items were found for %1$s. Click on this notification to check them out.
    </string>
    <string name="updates_button_text">Updates</string>
    <string name="tools_severity_text">Severity: <font color="#d9b329"> Medium </font></string>
    <string name="severity_text">Severity: &lt;font color=\"%2$s\"> %1$s &lt;font></string>
    <string name="id_text">id: %1$s</string>
    <string name="status_impact_text">Status Impact: %1$s</string>
    <string name="service_key_text">Service Key: %1$s</string>
    <string name="service_name_text">Service Name: %1$s</string>
    <string name="gcp_notif_pref_desc">
        Check this option to get a notification whenever there\'s a new GCP update
    </string>
    <string name="aws_notif_pref_desc">
        Check this option to get a notification whenever there\'s a new AWS update
    </string>
    <string name="azure_notif_pref_desc">
        Check this option to get a notification whenever there\'s a new Azure update
    </string>
    <string name="gcp_notif_pref_key">shouldShowGcpNotification</string>
    <string name="aws_notif_pref_key">shouldShowAwsNotification</string>
    <string name="azure_notif_pref_key">shouldShowAzureNotification</string>
    <string name="about_cloud_status_checker_title">About Cloud Status Checker</string>
    <string name="about_text_view">CloudStatusChecker gets you the latest alerts for major cloud providers and displays them in an easy-to-read manner, we provide tailored notifications for the cloud providers you care about the most.\n\nOur alerts drill down to the specific areas which are crucial to keep you up to date with the latest developments such as “most recent updates” and “affected products”.\n\nThis is an offline-first app so even without a network connection you can see any updates that are cached on your device.\n\nThis is an open source app developed by two Android developers with a passion for technology and cloud infrastructure, if you have any suggestions or would like to report an issue then please reach out to us using the methods below.</string>
    <string name="about_close_button">Close</string>
    <string name="logo">logo</string>
</resources>
